# litestar-mongodb

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/controller/: __init__.py  base_controller.py  session_controller.py
src/core/: mongo.py  request_handler.py  settings.py
src/schemas/: user_schema.py
src/templates/: index.html.jinja  not_found.html.jinja
src/templates/layout/: base.html.jinja
src/templates/session/: login.html.jinja
