[project]
name = "litestar-mongodb"
version = "0.1.0"
description = "Litestar with mongodb"
authors = [
    {name = "Christopher Pieper", email = "c.pieper@mailbox.org"},
]
dependencies = [
    "litestar[standard]>=2.11.0",
    "motor>=3.5.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
